# ml_py_learning

./: .gitignore  README.md  d2l_env.bat  main.py  requirements.txt  requirements_d2l.txt
0_preliminary/: matplot_01.ipynb  numpy_01.ipynb  numpy_03.ipynb
data-viz/: py_4_ds_01.ipynb  py_4_ds_01_intro.ipynb  py_4_ds_02_transform.ipynb
data_analysis/: numpy_operations.ipynb
deeplearning/: backpropagation_manual.ipynb  gradient_descent.ipynb  preliminary_mathematical.ipynb  softmax.ipynb
dive_in_to_deeplearning/: README.md  backpropagation_manual.ipynb  preliminary_mathematical.ipynb
dl-basic/: dl_from_scratch_01.ipynb  gradient_descent.ipynb
dl_basic/: SGD.ipynb  backpropagation_manual.ipynb
dl_tutorial/: README.md
object-detection/pid_project_extract/: .env_dev  .gitignore  pyproject.toml  requirements.txt  run_standalone.sh
object-detection/pid_project_extract/inference/ch_ppocr_server_v2.6_det_infer/: inference.pdiparams
object-detection/pid_project_extract/pid_project_extract/: __init__.py  settings.py
object-detection/pid_project_extract/pid_project_extract/db/: app_conf.py
object-detection/pid_project_extract/pid_project_extract/services/: __init__.py  project_xml.py  utils.py
object-detection/pid_project_extract/pid_project_extract/web/api/: router.py
object-detection/pid_project_extract/pid_project_extract/web/api/monitoring/: __init__.py
output/: input_page-0009_ocr.docx
preliminary/: linear_algebra_01.ipynb  numpy_02.ipynb  numpy_04_multiply.ipynb  torch_01.ipynb  torch_02.ipynb
py-basic/: 01_basic.ipynb
temp/: networkx_test0.ipynb  networkx_test1.ipynb  pdf_2_img.ipynb  search_path.ipynb  test0.ipynb  test2.ipynb  test3.ipynb
torch-NLP/: 01_basic_NLP.ipynb  04_classifying_surnames_cnn.ipynb  04_classifying_surnames_mlp.ipynb  04_munging_surname_dataset.ipynb
torch-deep-learning-process/: 01_tensor_beginner.ipynb  05_optimization.ipynb  06_load_and_run.ipynb
torch-misc/: 03_building_model_layers.ipynb  04_autograd2.ipynb  04_automatic_differentiation.ipynb  05_optimization.ipynb  06_load_and_run.ipynb  autograd.ipynb  autograd2.ipynb  beginner.ipynb  demo.py  nn.ipynb  (+2 more)
(+143 files in other folders)
